# py_rust_sgf_render

./: .gitignore  README.md  game_1.sgf  game_2.sgf  game_4.sgf  game_5.sgf  game_6.sgf  game_7.sgf  test_renderer.py
rust_sgf_renderer/: Cargo.toml  pyproject.toml
rust_sgf_renderer/src/: lib.rs
